# genomstack

./: .gitignore  README.md  joystick_control.py  joystick_remote.py  lio_relay.py  obelix.py  pixi.toml  pyproject.toml
calib/: imucalib.json
config/: joystick.yaml  joystick_f310_macos.yaml  joystick_f710.yaml  tilthex.yaml  tilthex_simu.yaml  tilthex_simu_remote.yaml
gz/: quad.world
gz/models/mrsim-quadrotor/: model.config  model.sdf
gz/models/mrsim-quadrotor-camera/: model.config  model.sdf
gz/models/mrsim-rotor/: model.sdf
gz/models/mrsim-tilthex/: model.config  model.sdf
pixi/: activation.sh  activation_ros2.sh  build.sh  checkout.sh
ros2/: bag_record.py  launcher.py
ros2/config/: mid360.json  mid360.yaml  rko_lio.yaml  rviz_livox.rviz
src/genomstack/: __init__.py  config.py  external_publisher.py  joystick.py  joystick_gui.py  mission.py  robot.py  robot_io.py  runtime.py  utils.py
src/genomstack/components/: __init__.py  base.py  maneuver.py  mocap.py  pom.py  rotorcraft.py  uavposatt.py
