[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomstack"
version = "0.1.0"
description = "Python interface for a GenoM-based aerial robot stack"
authors = [{ name = "Martin Jacquet", email = "martin.jacquet@inria.fr" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "PyYAML>=6.0"]
# external dependency: genomix (robotpkg)

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
